Update index.html with images path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Harsheekesh-Tiwari</title>
-  <link rel="shortcut icon" href="assets/favi.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favi.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/9b184caf9e.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
   <div id="header">
     <div class="container">
       <nav>
-        <img src="/assets/Top-Head-preview.png" class="logo" alt="Logo" />
+        <img src="Top-Head-preview.png" class="logo" alt="Logo" />
         <ul id="navMenu">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col1">
-          <img src="/assets/new-bg.jpg" alt="Harsheekesh Tiwari" />
+          <img src="new-bg.jpg" alt="Harsheekesh Tiwari" />
         </div>
         <div class="about-col2">
           <h1 class="subtitle">About Me</h1>
@@ -119,42 +119,42 @@
       <h3 class="subtitle">Academic Record & Activities</h3>
       <div class="record-list">
         <div class="cgpa-record">
-          <img src="/assets/UNIBG.jpg" alt="Academic Statistics" />
+          <img src="UNIBG.jpg" alt="Academic Statistics" />
           <div class="layer">
             <h3>Acadmic Statistics</h3>
             <p>Consistently performed well with a current average CGPA of 8.43 till the 3rd semester of BCA at MMDU Mullana.</p>
           </div>
         </div>
         <div class="cgpa-record">
-          <img src="/assets/techno2024.jpg" alt="Technophilia-2k24" />
+          <img src="techno2024.jpg" alt="Technophilia-2k24" />
           <div class="layer">
             <h3>Participant <br /> Technophilia-2k24</h3>
             <p>Actively participated in project showcases and tech sessions, highlighting innovation and teamwork.</p>
           </div>
         </div>
         <div class="cgpa-record">
-          <img src="/assets/techno2025.jpg" alt="Technophilia-2k25" />
+          <img src="techno2025.jpg" alt="Technophilia-2k25" />
           <div class="layer">
             <h3>Winner | Technophilia-2k25</h3>
             <p>Winner of the Tech Trivia competition, showcasing strong technical knowledge, quick thinking, and problem-solving skills.</p>
           </div>
         </div>
         <div class="cgpa-record">
-          <img src="/assets/hindiwinner.jpg" alt="Hindi Divas" />
+          <img src="hindiwinner.jpg" alt="Hindi Divas" />
           <div class="layer">
             <h3>Winner | Hindi Divas</h3>
             <p>Secured 1st position in the Hindi Divas competition, celebrating linguistic excellence and creative expression in Hindi.</p>
           </div>
         </div>
         <div class="cgpa-record">
-          <img src="/assets/SIH-24.jpg" alt="Smart India Hackathon" />
+          <img src="SIH-24.jpg" alt="Smart India Hackathon" />
           <div class="layer">
             <h3>Smart India Hackathon 2024</h3>
             <p>Participated in the Smart India Hackathon 2024, contributing to innovative solutions for real-world problems.</p>
           </div>
         </div>
         <div class="cgpa-record">
-          <img src="/assets/PROexe.jpg" alt="Smart India Hackathon" />
+          <img src="PROexe.jpg" alt="Smart India Hackathon" />
           <div class="layer">
             <h3>Project Exhibition</h3>
             <p>Proudly led as Student Coordinator of the Project Exhibition on National Technology Day.</p>
@@ -177,7 +177,7 @@
             <a href="https://github.com/Harsheekesh"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.instagram.com/tech.buster01?igsh=NmhjcWxvZmRzZXVv"><i class="fa-brands fa-instagram"></i></a>
           </div>
-          <a href="assets/Harsheekesh Tiwari-ATS.pdf" class="btn btn2">Download CV</a>
+          <a href="Harsheekesh Tiwari-ATS.pdf" class="btn btn2">Download CV</a>
         </div>
         <div class="contact-right">
           <form name="submit-to-google-sheet">
