--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Harsheekesh-Tiwari</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Primary Meta Tags -->
+  <title>Harsheekesh Tiwari | Frontend Developer & BCA Student | MMDU</title>
+  <meta name="description" content="Portfolio of Harsheekesh Tiwari - Frontend Developer specializing in HTML, CSS, JavaScript. BCA student at MMDU with hackathon experience and web development projects.">
+  <meta name="keywords" content="frontend developer, web developer, portfolio, HTML, CSS, JavaScript, BCA student, MMDU Mullana, hackathon participant, placement management system">
+  <meta name="author" content="Harsheekesh Tiwari">
+  
+  <!-- Open Graph / Facebook Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://harsheekesh.github.io/portfolio">
+  <meta property="og:title" content="Harsheekesh Tiwari | Frontend Developer Portfolio">
+  <meta property="og:description" content="BCA student at MMDU specializing in web development with HTML, CSS, and JavaScript projects.">
+  <meta property="og:image" content="https://harsheekesh.github.io/portfolio/preview-image.jpg">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Harsheekesh Tiwari | Frontend Developer Portfolio">
+  <meta name="twitter:description" content="Portfolio showcasing web development projects and academic achievements as a BCA student at MMDU.">
+  <meta name="twitter:image" content="https://harsheekesh.github.io/portfolio/preview-image.jpg">
+  
+  <!-- Favicon -->
   <link rel="shortcut icon" href="favi.png" type="image/x-icon">
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/9b184caf9e.js" crossorigin="anonymous"></script>
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://harsheekesh.github.io/portfolio">
+  
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+  
+  <!-- Font Awesome with integrity check -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" />
+  
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
 
